Got table working 80%. Needs Totals both ways and a footer. Part 2

--- a/style.css
+++ b/style.css
@@ -16,6 +16,20 @@ h1  {
 img {
 
 }
+section {
+  border: thin, solid, black;
+  border-collapse: collapse;
+}
+
+table tr{
+      border: thin, solid, black;
+        border-collapse: collapse;
+}
+
+tr {
+  border: thin, solid, black;
+
+}
 
 p {
   background-color: salmon;
