--- a/style.css
+++ b/style.css
@@ -2,25 +2,44 @@
   box-sizing: border-box;
   font: Verdana, 18px;
   color: #DDFFA0;
+  margin: 0;
+  padding-left: 0;
+
 }
 
 body  {
   background-color: #B25D4C;
-  font: Verdana, 18px;
+  font-family: Verdana, sans-serif, 18px;
   color: #DDFFA0;
 
 }
 
 h1  {
-  border: thin, solid, black;
   font-family: 'Pacifico', cursive;
   color: #DDFFA0;
-  width: 75%;
+  font-size: 2.5em;
+  width: 100%;
+  height: 200px;
+  text-align: center;
+  padding-top: 117px;
+  padding-right: 69px;
+  position: absolute;
+  z-index: 11;
+
+
 }
 
 #logo {
-float: left;
-width: 60%;
+position: relative;
+/*margin-left: 190px;*/
+background-color: #577BCC;
+padding-left: 150px;
+padding-right: 150px;
+padding-bottom: 10px;
+padding-top: 10px;
+
+z-index: 10;
+
 
 }
 section {
@@ -38,13 +57,15 @@ list-style-type:
 }
 
 p {
-  font: Verdana, 18px;
+  /*font: Verdana, 18px;*/
   color: #DDFFA0;
+  position: relative;
 }
 
 h2  {
-  font: Verdana, 18px;
+  /*font: Verdana, 18px;*/
   color: #DDFFA0;
+  position: relative;
 }
 
 ul  {
