--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ h1  {
   position: absolute;
   z-index: 11;
 }
-
+h2 {
+  text-align: center;
+}
 #logo {
 position: relative;
 width: 100%;
@@ -121,6 +123,7 @@ p {
   position: relative;
   margin: 30px;
   margin-right: 0px;
+  margin-bottom: 10px;
   float: left;
 }
 #story {
@@ -136,13 +139,18 @@ p {
 }
 #menu {
   position: relative;
-  margin-left: 20%;
-  margin-top: 100%;
+  margin: 30px;
+  float: left;
 }
 #family {
-  width: 120px;
+  width: 300px;
+  float: left;
 }
-
+#location {
+  position: relative;
+  margin: 30px;
+  float: left;
+}
 aside {
   float: right;
   margin-right: 20px;
@@ -157,6 +165,7 @@ aside.p {
 
 footer  {
 text-align: center;
+margin-top: 80%;
 }
 .color {
 background-color: #B25D4C;
